Fix margin overflow issues on Chrome

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     ),
     linear-gradient(178deg, rgba(0, 138, 255), rgba(0, 138, 255, 0) 70%),
     linear-gradient(24deg, rgba(0, 255, 198), rgba(0, 255, 198, 0) 35%);
-  margin: -8px -8px -8px -8px;
+  /* margin: -8px -8px -8px -8px; */
 }
 
 main {
@@ -26,6 +26,10 @@ main {
   z-index: -3;
 
   /* margin: -8px -8px -8px -8px; */
+}
+
+body {
+  margin: 0;
 }
 
 code {
